--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>nur wae</h2>
+    <form action="" class="form">
+        <input type="text" class="txt">
+    </form>
     <script src="main.js"></script>
 </body>
 </html>
