--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keep Note</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
 </head>
 <body>
-    <form action="" class="form">
-        <input type="text" class="txt">
-    </form>
+    
+    <div class="container">
+        <div class="note-aria">
+            <input type="text" name="" id="title" class="title" placeholder="Title..." autocomplete="off">
+            <textarea name="" id="note-text" class="note-text" placeholder="Note area..."></textarea>
+        </div>
+        <div class="notes" id="notes">
+            <div class="note">
+                <h3 class="title-text" id="title-text">here</h3>
+                <p class="note-blog">Is my Note App</p>
+                <i class="fa fa-trash"></i>
+            </div>
+        </div>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
