--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     
     <div class="container">
         <div class="note-aria">
-            <input type="text" name="" id="title" class="title" placeholder="Title..." autocomplete="off">
-            <textarea name="" id="note-text" class="note-text" placeholder="Note area..."></textarea>
+            <input type="text" name="" id="title" class="title" placeholder="Take a note..." autocomplete="off"/>
+            <textarea name="" 
+                id="note-text" 
+                cols="30" 
+                rows="3" 
+                class="note-text" 
+                placeholder="note description"
+            ></textarea>
         </div>
+
         <div class="notes" id="notes">
-            <div class="note">
-                <h3 class="title-text" id="title-text">here</h3>
-                <p class="note-blog">Is my Note App</p>
-                <i class="fa fa-trash"></i>
-            </div>
+            
         </div>
     </div>
 
